--- a/README
+++ b/README
@@ -1,52 +1,118 @@
-# Get the data from UCSC
-Downloaded http://hgdownload.cse.ucsc.edu/goldenPath/fr2/database/all_est.sql 
-from UCSC on 05 Feb 2010
-Downloaded http://hgdownload.cse.ucsc.edu/goldenPath/fr2/database/all_est.txt 
-from UCSC on 05 Feb 2010
+Title:      README for fugu prep  
+Version:    0.3 (23 Mar 2010)  
+Author:     Brant C. Faircloth  
+Create:     22 Mar 2010  
+Edit:       23 Mar 2010  
 
+### Get data from UCSC
 
-# the above does not include the "spliced" ESTs, which are actually better, so 
-# get those data from the table browser at UCSC (we cannot easily download them)
+    wget http://hgdownload.cse.ucsc.edu/goldenPath/tetNig2/database/all_mrna.sql
+    wget http://hgdownload.cse.ucsc.edu/goldenPath/tetNig2/database/all_mrna.txt.gz
 
-Downloaded spliced EST data from the UCSC table browser to intronEst.txt
+### create table as in
 
-# Create the dbase tables from all_est.sql
-# Load the txt data from all_est.txt and intronEst.txt
+    http://hgdownload.cse.ucsc.edu/goldenPath/tetNig2/database/all_mrna.sql
 
-# Use `show create table est` to show the table structure for the est data
-# modify this create table statement to add an autoincrementing primary key
-# we need this key later to maintain referential integrity
+### insert data into table
 
-# now, to get the data into the table do: 
-insert into splice (bin, matches, misMatches, repMatches, nCount, 
-qNumInsert, qBaseInsert, tNumInsert, tBaseInsert, strand, qName, qSize, qStart, 
-qEnd, tName, tSize, tStart, tEnd, blockCount, blockSizes, qStarts, tStarts) select
- * from t_splice;
+    mv all_mrna.txt all_mrna.22-Mar-2010.txt  
+    
+    mysql> load data infile '/Users/bcf/git/fugu/data/tetNig2/all_mrna.22-Mar-2010.txt' \
+    into table x_mrna_all fields terminated by '\t';
 
-# create a new table for the start/end data that we're going to copy over
-CREATE TABLE `starts` (
-`id` int(10) unsigned NOT NULL,
-`start` int(10) unsigned NOT NULL default '0',
-`end` int(10) unsigned NOT NULL default '0',
-`length` mediumint(8) unsigned NOT NULL default '0',
-FOREIGN KEY (`id`) references splice (`id`),
-KEY `start` (`start`),
-KEY `end` (`end`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+### Use `show create table est` to show the table structure for the est data modify this create table statement to add an autoincrementing primary key we need this key later to maintain referential integrity
 
-# parse the blockSize and tStart columns out into their own rows using:
+    CREATE TABLE `mrna` (
+    `id` int unsigned NOT NULL auto_increment,
+    `bin` smallint(5) unsigned NOT NULL default '0',
+    `matches` int(10) unsigned NOT NULL default '0',
+    `misMatches` int(10) unsigned NOT NULL default '0',
+    `repMatches` int(10) unsigned NOT NULL default '0',
+    `nCount` int(10) unsigned NOT NULL default '0',
+    `qNumInsert` int(10) unsigned NOT NULL default '0',
+    `qBaseInsert` int(10) unsigned NOT NULL default '0',
+    `tNumInsert` int(10) unsigned NOT NULL default '0',
+    `tBaseInsert` int(10) unsigned NOT NULL default '0',
+    `strand` char(2) NOT NULL default '',
+    `qName` varchar(255) NOT NULL default '',
+    `qSize` int(10) unsigned NOT NULL default '0',
+    `qStart` int(10) unsigned NOT NULL default '0',
+    `qEnd` int(10) unsigned NOT NULL default '0',
+    `tName` varchar(255) NOT NULL default '',
+    `tSize` int(10) unsigned NOT NULL default '0',
+    `tStart` int(10) unsigned NOT NULL default '0',
+    `tEnd` int(10) unsigned NOT NULL default '0',
+    `blockCount` int(10) unsigned NOT NULL default '0',
+    `blockSizes` longblob NOT NULL,
+    `qStarts` longblob NOT NULL,
+    `tStarts` longblob NOT NULL,
+    PRIMARY KEY (id),
+    KEY `tName` (`tName`(8),`bin`),
+    KEY `tName_2` (`tName`(8),`tStart`),
+    KEY `qName` (`qName`(12)),
+    KEY `tName_3` (`tName`(8),`tEnd`)
+    ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
-python splitStart.py -c db.conf
+### insert the data from the UCSC table
 
-# using the data in the newly created `starts` table (from splitStart.py above), 
-# go through regions, find those that overlap with at least 3 overlapping ESTs,
-# compact that all done into a single `region` (composed of elements in
-# `region_components` and record the area covered by the `region`
+    insert into mrna (bin, matches, misMatches, repMatches, nCount,
+    qNumInsert, qBaseInsert, tNumInsert, tBaseInsert, strand, qName, qSize,
+    qStart, qEnd, tName, tSize, tStart, tEnd, blockCount, blockSizes, qStarts, 
+    tStarts) select * from x_mrna_all;
 
-python splitCluster.py -c db.conf -d 0
+### since these tables are duplicates, drop the original table without the primary key
 
-# build a bed file from the records
+    drop table x_mrna_all;
 
-python makeBedFromRegion.py -c db.conf
+### parse the blockSize and tStart columns out into their own rows using:
 
+    python splitStart.py --configuration=data/tetNig2/db.conf \
+    --tablename=starts --reftablename=mrna
 
+### using the data in the newly created `starts` table (from splitStart.py above), go through regions, compact that all done into a single `region` (composed of elements in `region_components` and record the area covered by the `region`
+
+    python splitCluster.py --configuration=data/tetNig2/db.conf --distance=0 \
+    --minoverlaps=0 --tablename=starts --reftablename=mrna
+
+### rename files in mysql because it's easier than changing the program
+
+    rename table region to exons;
+    rename table region_components to exon_components;
+
+### setup some foreign keys if not exists
+
+    alter table exons add foreign key (mrna_id) references mrna (id);
+
+### create the genes table
+
+    create table genes (id int unsigned not null auto_increment, mrna_id int    
+    unsigned not null, chromo varchar(15) default NULL, start int unsigned not 
+    null, end int unsigned not null, primary key (id), index(mrna_id), foreign 
+    key (mrna_id) references mrna(id)) ENGINE=InnoDB charset=utf8;
+    insert into genes (mrna_id) select distinct(mrna_id) from exons;
+
+### add foreign key to genes if not exists
+
+    alter table genes add foreign key (mrna_id) references mrna (id);
+
+### produce a bed file of the gene-region
+
+    python makeBedFromRegion.py --configuration=data/tetNig2/db.conf \
+    --out=data/tetNig2/tetNig2_putativeGenes.bed --advanced
+
+### get the intersection between putative genes and the transalign refseq
+
+    (do this via UCSC)
+
+### run the geneMinMax.py script to get ranges of putative gene regions
+
+    python geneMinMax.py --configuration=data/tetNig2/db.conf
+
+### parse the intersection data:
+
+    python transalignParser.py --configuration=data/tetNig2/db.conf \
+    --input=data/tetNig2/tetNig2PutativeGeneIntersecetTransmapReverse.bed
+
+### get the annotation data from NCBI
+
+    python ncbiQuery.py --configuration=data/tetNig2/db.conf
